# infinite-lattice

./: .gitignore  ARCHITECTURE.md  CLAIMS_PROVEN.md  CRACK_THE_MINIVERSE.md  DEEP_DIVE_VERDICT.md  FINDINGS.md  GAMMA_MIXER_FINDINGS.md  INDEX.md  MARCO_FINDINGS.md  MEASUREMENTS.md  ONTOLOGY.md  PARADIGM.md  PITAGORA_INTEGRATION.md  RAG_FOR_ANDREA.md  RAG_PRODUCT.md  RAG_README.md  README.md  RESEARCH_ATLAS.md  UNIFIED_ENGINE.md  _additive_probe.py  _additive_probe2.py  _additive_probe3.py  _arch_synth.txt  _coord_tables.txt  _dd_arch_chamber_control.py  _dd_arch_chamber_residual.py  _dd_arch_compound_meet_factor.py  _dd_arch_control_out.txt  _dd_arch_doc_prune.py  _dd_arch_doc_prune_out.txt  _dd_arch_stack.py  _dd_arch_stack_out.txt  _dd_arch_weight_bitpack.py  _dd_arch_weight_bitpack_out.txt  _dd_beyond_k3.py  _dd_beyond_k3_stress.py  _dd_break_meet.py  _dd_break_meet_float.py  _dd_break_meet_store.py  _dd_bugfix_verify.py  (+383 more)
_docs/: AETHOS_Complete_Specification_v2.txt  AETHOS_Complete_Technical_Specification_FINAL_2.txt  AETHOS_OSCAR_Complete_Explanation3.txt  AETHOS_Operations_Design_for_Andrea.txt  AETHOS_Technical_Validation_35_Tests.txt
_pitagora_ref/: rag_api.py
_playground_viz/: play1_meet_field.py  play2_mod2_octant.py  play3_sheared_sierpinski.py  play4_prime_gasket.py
aethos_clean/: __init__.py  bench_beir.py  composite_train.py  gates.json  gates.py  pipeline.py  storage.py  types.py
book/: 00_Front_Matter.js  01_Chapter_1.js  02_Chapter_2.js  03_Particles.js  03_ThreeD_Complex_Plane.js  04_QM.js  05_Atoms_and_Cosmology.js  06_Synthesis.js  README.md  (+3 more)
(+490 files in other folders)
